Add init other login code

--- a/ownliked/WebRoot/view/jsp/user/css/indexRegister.css
+++ b/ownliked/WebRoot/view/jsp/user/css/indexRegister.css
@@ -35,4 +35,8 @@ form.registerForm li{
 	font-weight: 300;
 	color:red; !important
 }
-  
+
+
+.otherLogin{
+	margin: 0 auto; width: 360px; position: relative;
+}
