--- a/ownliked/WebRoot/view/jsp/user/css/indexRegister.css
+++ b/ownliked/WebRoot/view/jsp/user/css/indexRegister.css
@@ -1,42 +1,219 @@
-#login_logo{
-	margin:96px 0 0 ;
+#SignUp {
+text-align: center;
 }
-#login_logo a{
-	display:block;
-	width:259px;
-	height:66px;
-	margin: 0 auto 50px;
+.education {
+color: #7b6f6f;
+font-family: 'Georgia';
+font-size: 22px;
+line-height: 1.4;
+margin-left: -303px;
+position: fixed;
+top: 0;
+left: 50%;
+width: 606px;
+-webkit-transition: opacity 1s;
+-webkit-transition-delay: 0.3s;
+-webkit-transform: translateZ(0);
 }
-form.registerForm{
-	width:260px;
-	margin:0 auto;
+.education.logo {
+text-align: center !important;
+padding-top: 55px;
+color: #333;
 }
-form.registerForm li{
-	border:none !important
+#SignUp .education {
+margin-left: -512px;
+text-align: left;
+width: 1024px;
 }
-.not_inputs{
-	overflow:hidden;
+.header {
+margin: 0 0 35px;
+padding-top: 35px;
+text-align: center;
 }
-.not_inputs .button{
-	float:left;
+#SignUp .header {
+margin-bottom: 30px;
 }
-#forgetPassword, #backToLogin{
-	float:right;
-	font-size:13px;
-	font-weight:normal;
-	margin:11px 0 0 12px;
+#SignUp .buttons {
+margin: 30px 0;
+overflow: hidden;
 }
-.colorless, .colorless a{
-	color:#8c7e7e;
+#SignUp h3 {
+background: url(../images/join/rule_589x4.png) no-repeat top center;
+color: #888;
+font-family: serif;
+font-weight: normal;
+font-size: 18px;
+padding-top: 35px;
 }
-.error{
-	text-align:center;
-	font-size: 18px;
-	font-weight: 300;
-	color:red; !important
+#SignUp .footer {
+background: url(../images/join/rule_589x4.png) no-repeat top center;
+margin-top: 30px;
+padding: 30px 0;
+text-align: center;
+}
+#SignUp .education p:first-child {
+margin-bottom: 12px;
+}
+#SignUp .buttons li {
+display: inline-block;
+}
+#SignUp .buttons li:first-child {
+margin-right: 20px;
+}
+.education.logo img {
+margin-top: -5px;
+}
+.wrapper {
+margin-top: 220px;
+position: relative;
+z-index: 99;
+}
+#Loading {
+display: none;
+position: absolute;
+left: 50%;
+top: 48%;
+margin-left: -30px;
+width: 60px;
+height: 60px;
+opacity: 0;
+-webkit-transition: opacity 0.3s;
+background: url(data:image/gif;base64,R0lGODlhIAAgAPMAAP///yIZGc3Ly5SQkL+9vaejo1BJSWxmZt3b2…lLX+BP0XJLAPGzTkAuAOqb0WT5AH7OcdCm5B8TgRwSRKIHQtaLCwg1RAAAOwAAAAAAAAAAAA==) no-repeat center;
+}
+.shadow {
+-moz-box-shadow: 0 -2px 20px 0 rgba(0, 0, 0, 0.2);
+-webkit-box-shadow: 0 -2px 20px 0 rgba(0, 0, 0, 0.2);
+box-shadow: 0 -2px 20px 0 rgba(0, 0, 0, 0.2);
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+height: 20px;
+-webkit-transform: translateZ(0);
+}
+
+.content {
+padding-top: 35px;
+background: #fdfdfd;
+position: relative;
+overflow: hidden;
+min-height: 100px;
+}
+.intermission {
+background: url(../images/join/rule_split_589x4.png) no-repeat center center;
+color: #888;
+font-family: 'Georgia';
+font-size: 18px;
+text-align: center;
+margin: 0 0 30px;
+}
+.getStarted {
+color: #7b6f6f;
+font-size: 17px;
+margin: -50px 0 10px;
+font-family: 'Georgia';
+}
+.header h1 {
+color: #333;
+font-family: 'Georgia';
+font-size: 35px;
+text-align: center;
+}
+.intermission .text {
+background: #FDFDFD;
+display: inline-block;
+padding: 0 10px;
 }
 
 
-.otherLogin{
-	margin: 0 auto; width: 360px; position: relative;
+#SignUp .BigButton {
+-moz-border-radius: 8px;
+-webkit-border-radius: 8px;
+border-radius: 8px;
+box-shadow: inset 0 1px rgba(255, 255, 255, .5), 0 2px #fff;
+color: #fff;
+display: inline-block;
+font-size: 30px;
+font-weight: bold;
+line-height: 1;
+min-width: 160px;
+padding: 20px 10px 20px 87px;
+position: relative;
+text-align: left;
+text-decoration: none;
+}
+#SignUp .BigButton .logo {
+background-position: center center;
+background-repeat: no-repeat;
+bottom: 0;
+left: 0;
+position: absolute;
+top: 0;
+width: 62px;
+}
+#SignUp .twitter {
+background: #41c0f3;
+background: -webkit-gradient(linear, left top, left bottom, from(#41c0f3), to(#3fbaec));
+background: -moz-linear-gradient(top, #41c0f3, #3fbaec);
+background: -o-linear-gradient(top, #41c0f3, #3fbaec);
+background: -webkit-linear-gradient(top, #41c0f3, #3fbaec);
+background: linear-gradient(top, #41c0f3, #3fbaec);
+border: 1px solid #2982a8;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#41c0f3', endColorstr='#3fbaec');
+text-shadow: 0 -1px #2982a8;
+}
+#SignUp .BigButton .logo {
+background-position: center center;
+background-repeat: no-repeat;
+bottom: 0;
+left: 0;
+position: absolute;
+top: 0;
+width: 62px;
+}
+#SignUp .twitter .logo {
+background-color: #66caf2;
+background-color: rgba(255, 255, 255, .2);
+background-image: url(../../../images/login/LOGO_QQ.png);
+}
+#SignUp .facebook .logo {
+background-color: #5f75a9;
+background-color: rgba(255, 255, 255, .2);
+background-image: url(../../../images/login/LOGO_48x48.png);
+}
+#SignUp .facebook {
+background: #415ea3;
+background: -webkit-gradient(linear, left top, left bottom, from(#415ea3), to(#2e4a88));
+background: -moz-linear-gradient(top, #415ea3, #2e4a88);
+background: -o-linear-gradient(top, #415ea3, #2e4a88);
+background: -webkit-linear-gradient(top, #415ea3, #2e4a88);
+background: linear-gradient(top, #415ea3, #2e4a88);
+border: 1px solid #09164a;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#415ea3', endColorstr='#2f4a89');
+text-shadow: 0 -1px #28417a;
+}
+#SignUp h3 {
+color: #888;
+font-family: serif;
+font-weight: normal;
+font-size: 18px;
+}
+#SignUp h3 a {
+color: #cc2027;
+font-weight: normal;
+}
+#SignUp .footer {
+background: url(../images/join/rule_589x4.png) no-repeat top center;
+margin-top: 30px;
+padding: 30px 0;
+text-align: center;
+}
+#SignUp h3.login {
+margin-top: -5px;
+padding: 0 0 15px;
+background: none;
+font-size: 14px;
+}
+#SignUp h3.login a {
+font-size: 14px;
 }
