--- a/ownliked/WebRoot/view/jsp/clip/css/indexPopular.css
+++ b/ownliked/WebRoot/view/jsp/clip/css/indexPopular.css
@@ -647,6 +647,10 @@ float: none !important;
 	position: relative;
 	position: relative;
 }
+.followBoard .cover img{
+	width: 225px;
+	height : 150px;
+}
 .followBoard .reFollow{
 	padding: 0;
 	text-align: center;
