--- a/ownliked/WebRoot/view/css/indexRegister.css
+++ b/ownliked/WebRoot/view/css/indexRegister.css
@@ -38,7 +38,7 @@ margin: 30px 0;
 overflow: hidden;
 }
 #SignUp h3 {
-background: url(images/join/rule_589x4.png) no-repeat top center;
+background: url(../images/join/rule_589x4.png) no-repeat top center;
 color: #888;
 font-family: serif;
 font-weight: normal;
@@ -46,7 +46,7 @@ font-size: 18px;
 padding-top: 35px;
 }
 #SignUp .footer {
-background: url(images/join/rule_589x4.png) no-repeat top center;
+background: url(../images/join/rule_589x4.png) no-repeat top center;
 margin-top: 30px;
 padding: 30px 0;
 text-align: center;
@@ -100,7 +100,7 @@ overflow: hidden;
 min-height: 100px;
 }
 .intermission {
-background: url(images/join/rule_split_589x4.png) no-repeat center center;
+background: url(../images/join/rule_split_589x4.png) no-repeat center center;
 color: #888;
 font-family: 'Georgia';
 font-size: 18px;
@@ -174,12 +174,12 @@ width: 62px;
 #SignUp .twitter .logo {
 background-color: #66caf2;
 background-color: rgba(255, 255, 255, .2);
-background-image: url(images/login/LOGO_QQ.png);
+background-image: url(../images/login/LOGO_QQ.png);
 }
 #SignUp .facebook .logo {
 background-color: #5f75a9;
 background-color: rgba(255, 255, 255, .2);
-background-image: url(images/login/LOGO_48x48.png);
+background-image: url(../images/login/LOGO_48x48.png);
 }
 #SignUp .facebook {
 background: #415ea3;
@@ -203,7 +203,7 @@ color: #cc2027;
 font-weight: normal;
 }
 #SignUp .footer {
-background: url(images/join/rule_589x4.png) no-repeat top center;
+background: url(../images/join/rule_589x4.png) no-repeat top center;
 margin-top: 30px;
 padding: 30px 0;
 text-align: center;
